disabled/vcluster-dkf/overlays/ops/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vcluster
  namespace: vcluster-dkf
  annotations:
    link.argocd.argoproj.io/external-link: https://dkf.k.cluster.sciops.net
spec:
  hosts:
    - "dkf.k.cluster.sciops.net"
  gateways:
    - istio-system/istio-ingressgateway
  tls:
    - match:
        - sniHosts:
            - "dkf.k.cluster.sciops.net"
      route:
        - destination:
            host: vcluster.vcluster-dkf.svc.cluster.local
            port:
              number: 443
